# coding_architecture_fs26

./: README.md  pyproject.toml
Coding Architecture II/Assignment_A01/: 0_Zhao_Wanru_A01.gh  a01_brep-mesher.ghx  a01_mesher02.py  a01_mesher_2.py  a01_mesher_backup.py  a01_rf_system_2.py  a01_timber_model_2.py
Coding Architecture II/Assignment_A01/Abgabe/: Zhao_Wanru_A-01.ghx  a01_mesher.py  a01_rf_system.py  a01_timber_model.py
Coding Architecture II/Assignment_A02/: Zhao_Wanru_A-02.ghx  a02_mesher.py
assignments/A00-compas-timber/: a00_compas-timber_starting_point.ghx  a00_timber_model.py
assignments/A01-mesh-brep-rf/: a01_brep-mesher.ghx  a01_mesher.py  a01_timber_model.py
assignments/A02-mesh-relax-rf/: a02_mesh-relax.ghx  a02_mesh_relax.py  a02_modifiers.py  a02_rf_system.py  a02_timber_model.py
assignments/A03-design-project/: README.md  a03_design-project-EXAMPLE-FILE-PLEASE-USE-YOURS.glb  a03_extra_3d_printing.py  a03_extra_structural_analysis-model.json  a03_extra_structural_analysis.ghx  a03_extra_structural_analysis.py  a03_extra_webxr.html  a03_extra_webxr.py  a03_mesh_relax.py  a03_mesher.py  a03_modifiers.py  a03_timber_model.py  a03_timber_model_solved.py
lectures/week-07/: README.md
lectures/week-09/: README.md
lectures/week-10/: README.md
lectures/week-11/: README.md
