[project]
name = "coding-architecture-fs26"
version = "0.1.0"
description = "Coding Architecture II FS26"
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = [
    "compas==2.15.1",
    "compas_timber==2.1.1-rc1",
    "timber_design==0.2.0",
    "pythonnet", 
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "rhino-stubs",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 179

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
